# kurs8

./: .env.sample  .gitignore  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
config/: settings.py  urls.py
main/: models.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
main/migrations/: 0001_initial.py  0002_alter_habit_options.py  0003_alter_habit_reward.py  0004_habit_send_time.py
users/: models.py  serializers.py  urls.py  views.py
users/management/commands/: createusers.py
users/migrations/: 0001_initial.py
